--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
-@include scrollbars(0.7em, goldenrod, #313131);
+@include scrollbars(0.7em, gold, #313131);
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
